Current Version: NaviLibrary v1.5

API Changes since v1.4:
- In NaviManager:
-- NaviManager::GetPointer has been added
-- NaviManager::Startup has been merged into the constructor for NaviManager.
-- You must instantiate (new NaviManager(renderWin)) NaviManager before accessing the singleton via NaviManager::Get/NaviManager::GetPointer.

Core Changes since v1.4:
- New template class 'NaviLibrary::Singleton' has been created to make the NaviManager Singleton safer and more manageable. It is mostly a carbon-copy of Ogre's Singleton except with different accessors (Singleton::Get()/Singleton::GetPointer()) and verbose exceptions.


Current Version: NaviLibrary v1.4

API Changes since v1.3:
- In NaviManager:
-- NaviManager::StartupMouse has a new, optional 'visible' parameter
-- NaviManager::moveNavi has been added
-- NaviManager::setNaviPosition has been added
-- NaviManager::setNaviIgnoreBounds has been added
-- NaviManager::bindNaviData & unbindNaviData have now been renamed bind & unbind, respectively.
-- NaviManager::bind has a new optional parameter, a string vector containing keys to validate via NaviData::ensure.
-- NaviManager::getDerivedUV has been added.
-- NaviManager::injectNaviMaterialMouseWheel has been renamed injectNaviMouseWheel because it may now be used on both regular Navis and NaviMaterials.
-- NaviManager::setNaviBackgroundColor has a new overload (takes a hex color string).
-- NaviManager::focusNavi has a new public overload (a private func by the same name exists) to focus a Navi by name.
- In NaviData:
-- Completely rewritten with an std::map as a base with heavy use of a generic type, 'NaviDataValue'.
-- Primary mode of interface is via the subscript operator (naviData["myKey"]) for assignment/value retrieval.
-- NaviData::ensure may be used for validation purposes.
- In NaviMouse:
-- NaviMouse::show() has been added
-- NaviMouse::hide() has been added