@@ -10,16 +10,26 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "NaviDemo", "NaviDemo\NaviDe
 EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
+		Debug DLL|Win32 = Debug DLL|Win32
 		Debug|Win32 = Debug|Win32
+		Release DLL|Win32 = Release DLL|Win32
 		Release|Win32 = Release|Win32
 	EndGlobalSection
 	GlobalSection(ProjectConfigurationPlatforms) = postSolution
+		{C308342C-9C74-4AA7-86F0-93B294657452}.Debug DLL|Win32.ActiveCfg = Debug DLL|Win32
+		{C308342C-9C74-4AA7-86F0-93B294657452}.Debug DLL|Win32.Build.0 = Debug DLL|Win32
 		{C308342C-9C74-4AA7-86F0-93B294657452}.Debug|Win32.ActiveCfg = Debug|Win32
 		{C308342C-9C74-4AA7-86F0-93B294657452}.Debug|Win32.Build.0 = Debug|Win32
+		{C308342C-9C74-4AA7-86F0-93B294657452}.Release DLL|Win32.ActiveCfg = Release DLL|Win32
+		{C308342C-9C74-4AA7-86F0-93B294657452}.Release DLL|Win32.Build.0 = Release DLL|Win32
 		{C308342C-9C74-4AA7-86F0-93B294657452}.Release|Win32.ActiveCfg = Release|Win32
 		{C308342C-9C74-4AA7-86F0-93B294657452}.Release|Win32.Build.0 = Release|Win32
+		{10BD1783-203F-4D55-883F-3C348E9044A6}.Debug DLL|Win32.ActiveCfg = Debug DLL|Win32
+		{10BD1783-203F-4D55-883F-3C348E9044A6}.Debug DLL|Win32.Build.0 = Debug DLL|Win32
 		{10BD1783-203F-4D55-883F-3C348E9044A6}.Debug|Win32.ActiveCfg = Debug|Win32
 		{10BD1783-203F-4D55-883F-3C348E9044A6}.Debug|Win32.Build.0 = Debug|Win32
+		{10BD1783-203F-4D55-883F-3C348E9044A6}.Release DLL|Win32.ActiveCfg = Release DLL|Win32
+		{10BD1783-203F-4D55-883F-3C348E9044A6}.Release DLL|Win32.Build.0 = Release DLL|Win32
 		{10BD1783-203F-4D55-883F-3C348E9044A6}.Release|Win32.ActiveCfg = Release|Win32
 		{10BD1783-203F-4D55-883F-3C348E9044A6}.Release|Win32.Build.0 = Release|Win32
 	EndGlobalSection
