@@ -160,7 +160,157 @@
 			<Tool
 				Name="VCPostBuildEventTool"
 				Description="Copying release runtimes files..."
-				CommandLine="if not exist &quot;$(TargetDir)\components\&quot; xcopy &quot;$(SolutionDir)Dependencies\win32\llmozlib\runtime\Release\*.*&quot; &quot;$(TargetDir)&quot; /s /y&#x0D;&#x0A;if not exist &quot;$(TargetDir)\OgreMain.dll&quot; xcopy &quot;$(OGRE_HOME)\bin\release\*.*&quot; &quot;$(TargetDir)&quot; /s /y&#x0D;&#x0A;if not exist &quot;$(TargetDir)\NaviLocal\&quot; xcopy &quot;$(ProjectDir)Bin\Build-Common\*.*&quot; &quot;$(TargetDir)&quot; /s /y&#x0D;&#x0A;if not exist &quot;$(TargetDir)\NaviLocal\Navi.js&quot; xcopy &quot;$(SolutionDir)Navi\Javascript\*.*&quot; &quot;$(TargetDir)\NaviLocal\&quot; /y"
+				CommandLine="if not exist &quot;$(TargetDir)\components\&quot; xcopy &quot;$(SolutionDir)Dependencies\win32\llmozlib\runtime\Release\*.*&quot; &quot;$(TargetDir)&quot; /s /y&#x0D;&#x0A;if not exist &quot;$(TargetDir)\OgreMain.dll&quot; xcopy &quot;$(OGRE_HOME)\bin\release\*.*&quot; &quot;$(TargetDir)&quot; /s /y&#x0D;&#x0A;if not exist &quot;$(TargetDir)\NaviLocal\&quot; xcopy &quot;$(ProjectDir)Bin\Build-Common\*.*&quot; &quot;$(TargetDir)&quot; /s /y&#x0D;&#x0A;if not exist &quot;$(TargetDir)\NaviLocal\Navi.js&quot; xcopy &quot;$(SolutionDir)Navi\Javascript\*.*&quot; &quot;$(TargetDir)\NaviLocal\&quot; /y&#x0D;&#x0A;"
+			/>
+		</Configuration>
+		<Configuration
+			Name="Debug DLL|Win32"
+			OutputDirectory="$(ProjectDir)Bin\$(ConfigurationName)"
+			IntermediateDirectory="$(ProjectDir)Objects\$(ConfigurationName)"
+			ConfigurationType="1"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				Optimization="0"
+				AdditionalIncludeDirectories="&quot;$(ProjectDir)Headers&quot;;&quot;$(SolutionDir)Navi\Include&quot;;&quot;$(OGRE_HOME)\include&quot;"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;NAVI_DYNAMIC_LIB"
+				MinimalRebuild="true"
+				BasicRuntimeChecks="3"
+				RuntimeLibrary="3"
+				WarningLevel="3"
+				Detect64BitPortabilityProblems="true"
+				DebugInformationFormat="4"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLinkerTool"
+				AdditionalDependencies="OgreMain_d.lib Navi_d_DLL.lib llmozlib_d.lib OIS_d.lib"
+				AdditionalLibraryDirectories="&quot;$(SolutionDir)Navi\Lib&quot;;&quot;$(SolutionDir)Dependencies\win32\llmozlib\lib&quot;;&quot;$(OGRE_HOME)\lib&quot;"
+				GenerateDebugInformation="true"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+				Description="Copying debug runtime files..."
+				CommandLine="if not exist &quot;$(TargetDir)\Navi_d.dll&quot; xcopy &quot;$(SolutionDir)Navi\Lib\Navi_d.dll&quot; &quot;$(TargetDir)&quot; /s /y&#x0D;&#x0A;if not exist &quot;$(TargetDir)\components\&quot; xcopy &quot;$(SolutionDir)Dependencies\win32\llmozlib\runtime\Debug\*.*&quot; &quot;$(TargetDir)&quot; /s /y&#x0D;&#x0A;if not exist &quot;$(TargetDir)\OgreMain_d.dll&quot; xcopy &quot;$(OGRE_HOME)\bin\debug\*.*&quot; &quot;$(TargetDir)&quot; /s /y&#x0D;&#x0A;if not exist &quot;$(TargetDir)\NaviLocal\&quot; xcopy &quot;$(ProjectDir)Bin\Build-Common\*.*&quot; &quot;$(TargetDir)&quot; /s /y&#x0D;&#x0A;if not exist &quot;$(TargetDir)\NaviLocal\Navi.js&quot; xcopy &quot;$(SolutionDir)Navi\Javascript\*.*&quot; &quot;$(TargetDir)\NaviLocal\&quot; /y&#x0D;&#x0A;"
+			/>
+		</Configuration>
+		<Configuration
+			Name="Release DLL|Win32"
+			OutputDirectory="$(ProjectDir)Bin\$(ConfigurationName)"
+			IntermediateDirectory="$(ProjectDir)Objects\$(ConfigurationName)"
+			ConfigurationType="1"
+			UseOfATL="0"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				Optimization="2"
+				AdditionalIncludeDirectories="&quot;$(ProjectDir)Headers&quot;;&quot;$(SolutionDir)Navi\Include&quot;;&quot;$(OGRE_HOME)\include&quot;"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;NAVI_DYNAMIC_LIB"
+				RuntimeLibrary="2"
+				DebugInformationFormat="0"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLinkerTool"
+				AdditionalOptions="/LTCG"
+				AdditionalDependencies="OgreMain.lib Navi_DLL.lib llmozlib.lib OIS.lib"
+				AdditionalLibraryDirectories="&quot;$(SolutionDir)Navi\Lib&quot;;&quot;$(SolutionDir)Dependencies\win32\llmozlib\lib&quot;;&quot;$(OGRE_HOME)\lib&quot;"
+				GenerateManifest="true"
+				GenerateDebugInformation="false"
+				AllowIsolation="true"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+				Description="Copying release runtimes files..."
+				CommandLine="if not exist &quot;$(TargetDir)\Navi.dll&quot; xcopy &quot;$(SolutionDir)Navi\Lib\Navi.dll&quot; &quot;$(TargetDir)&quot; /s /y&#x0D;&#x0A;if not exist &quot;$(TargetDir)\components\&quot; xcopy &quot;$(SolutionDir)Dependencies\win32\llmozlib\runtime\Release\*.*&quot; &quot;$(TargetDir)&quot; /s /y&#x0D;&#x0A;if not exist &quot;$(TargetDir)\OgreMain.dll&quot; xcopy &quot;$(OGRE_HOME)\bin\release\*.*&quot; &quot;$(TargetDir)&quot; /s /y&#x0D;&#x0A;if not exist &quot;$(TargetDir)\NaviLocal\&quot; xcopy &quot;$(ProjectDir)Bin\Build-Common\*.*&quot; &quot;$(TargetDir)&quot; /s /y&#x0D;&#x0A;if not exist &quot;$(TargetDir)\NaviLocal\Navi.js&quot; xcopy &quot;$(SolutionDir)Navi\Javascript\*.*&quot; &quot;$(TargetDir)\NaviLocal\&quot; /y&#x0D;&#x0A;"
 			/>
 		</Configuration>
 	</Configurations>
