@@ -8,11 +8,17 @@
 @del Navi\*.user
 @rmdir Navi\Objects\Release\ /S /Q
 @rmdir Navi\Objects\Debug\ /S /Q
+@rmdir Navi\Objects\Release DLL\ /S /Q
+@rmdir Navi\Objects\Debug DLL\ /S /Q
 @rmdir Navi\Docs\html\ /S /Q
 @del Navi\Lib\*.lib
 @del NaviDemo\*.user
 @rmdir NaviDemo\Objects\Release\ /S /Q
 @rmdir NaviDemo\Objects\Debug\ /S /Q
+@rmdir NaviDemo\Objects\Release DLL\ /S /Q
+@rmdir NaviDemo\Objects\Debug DLL\ /S /Q
 @rmdir NaviDemo\Bin\release\ /S /Q
 @rmdir NaviDemo\Bin\debug\ /S /Q
+@rmdir NaviDemo\Bin\release dll\ /S /Q
+@rmdir NaviDemo\Bin\debug dll\ /S /Q
 @echo ============== Done! ===============
